--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "bugs": {
     "url": "https://github.com/Alefule/travis-prueba/issues"
   },
-  "homepage": "https://github.com/Alefule/travis-prueba#readme"
+  "homepage": "https://github.com/Alefule/travis-prueba#readme",
+  "dependencies": {
+    "jest": "^24.8.0"
+  }
 }
