--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "test": "npm run test"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Alefule/travis-prueba.git"
