--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
-node_js: 
-  - "12"
+node_js:
+ - node
+branches:
+ only:
+   - masterscript:
+ - npm i
+ - npm run test
+cache:
+ directories:
+   - node_modules
