--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,13 @@ node_js:
 - stable
 branches:
   only:
-  - deploy
-script:
-- npm i
-- npm run test
-cache:
-  directories:
-  - node_modules
-deploy:
-  local_dir: dist
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  keep_history: TRUE
-  on:
-    branch: deploy
+  - digital
+env:
+  global:
+  - REMOTE_PATH=deploy
+  - REMOTE_USER=user_deploy
+  - REMOTE_HOST=157.230.123.9
+before_install:
+- bash scripts/install.sh
+after_success:
+- bash scripts/deploy.sh
